kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rest-app-service
          servicePort: 4000
      - path: /graphql
        backend:
          serviceName: graphql-app-service
          servicePort: 4000                  
      - path: /wsdl
        backend:
          serviceName: soap-app-service
          servicePort: 8001
