kubernetes/ingress/rest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
spec:
  backend:
    serviceName: rest-app-service
    servicePort: 80
